--- a/src/App.css
+++ b/src/App.css
@@ -20,8 +20,17 @@ body {
   --black: #000;
 }
 
-input, button {
+input,
+button {
   border: 0;
   outline: none;
   font-family: 'Inter', sans-serif;
+}
+
+button {
+  cursor: pointer;
+}
+
+ul {
+  list-style-type: none;
 }
