--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -8,7 +8,7 @@
   justify-content: space-between;
   max-width: 1440px;
   margin: auto;
-  padding: 2.063rem 7.875rem 2.125rem;
+  padding: 33px 8.75% 34px;
 }
 
 .logo {
