--- a/src/pages/components/PushModal/PushModal.module.scss
+++ b/src/pages/components/PushModal/PushModal.module.scss
@@ -1,14 +1,8 @@
-.form_group {
-  margin-top: 29px;
-}
-
-.line {
+.wrapper {
   display: flex;
-  gap: 7px;
-
-  & + .line {
-    margin-top: 32px;
-  }
+  flex-direction: column;
+  gap: 32px;
+  width: 100%;
 }
 
 .form {
@@ -17,6 +11,18 @@
   text-align: left;
   flex: 1;
   gap: 9px;
+
+  & + .form {
+    margin-top: 32px;
+  }
+}
+
+.exchange {
+  font-size: 21px;
+  line-height: 29px;
+  font-weight: 700;
+  color: #333;
+  text-align: center;
 }
 
 .label {
@@ -37,12 +43,12 @@
 
 .submit {
   width: 100%;
-  height: 65px;
-  margin-top: 34px;
-  font-size: 1.313rem;
+  height: 58px;
+  font-size: 18px;
   font-weight: 700;
   color: var(--white);
   background: var(--primary2);
   border: 0;
   border-radius: 12px;
+  cursor: pointer;
 }
