--- a/src/pages/components/Auth/FormRegister/FormRegister.module.scss
+++ b/src/pages/components/Auth/FormRegister/FormRegister.module.scss
@@ -47,10 +47,10 @@
   right: 23px;
   width: 24px;
   height: 24px;
-  background: url(../../../assets/icons/icon_hide.png);
+  background: url(../../../../assets/icons/icon_hide.png);
 
   &.show {
-    background: url(../../../assets/icons/icon_show.png);
+    background: url(../../../../assets/icons/icon_show.png);
   }
 }
 
