--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -18,7 +18,7 @@
   min-height: 279px;
   width: 587px;
   padding: 60px 42.5px;
-  background: var(--white);
+  background: #fff;
   border-radius: 20px;
 }
 
