--- a/src/components/Select/Select.module.scss
+++ b/src/components/Select/Select.module.scss
@@ -34,7 +34,7 @@
 
 .list {
     padding: 10px 0;
-    background: var(--white);
+    background: #fff;
     border-radius: 6px;
     box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.13);
 }
@@ -45,7 +45,7 @@
     cursor: pointer;
 
     &.active {
-        color: var(--white);
-        background: var(--primary2);
+        color: #fff;
+        background: #FF7A00;
     }
 }
