--- a/src/pages/components/PushModal/PushModal.module.scss
+++ b/src/pages/components/PushModal/PushModal.module.scss
@@ -50,8 +50,8 @@
   height: 58px;
   font-size: 18px;
   font-weight: 700;
-  color: var(--white);
-  background: var(--primary2);
+  color: #fff;
+  background: #FF7A00;
   border: 0;
   border-radius: 12px;
   cursor: pointer;
