--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,5 +1,5 @@
 .wrapper {
-  background: var(--primary);
+  background: #00023C;
 }
 
 .inner {
@@ -15,7 +15,7 @@
   font-size: 36px;
   line-height: 54px;
   font-weight: 700;
-  color: var(--white);
+  color: #fff;
   font-family: 'Poppins', sans-serif;
 }
 
@@ -41,7 +41,7 @@
   font-family: 'Inter', sans-serif;
   text-transform: uppercase;
   text-decoration: none;
-  color: var(--white);
+  color: #fff;
   border-radius: 12px;
 }
 
@@ -56,11 +56,11 @@
 }
 
 .btn_login {
-  background: var(--primary2);
+  background: #FF7A00;
 
 }
 
 .btn_register {
-  color: var(--primary);
-  background: var(--white);
+  color: #00023C;
+  background: #fff;
 }
