--- a/src/pages/components/Auth/FormRegister/FormRegister.module.scss
+++ b/src/pages/components/Auth/FormRegister/FormRegister.module.scss
@@ -60,8 +60,8 @@
   margin-top: 39px;
   font-size: 1.313rem;
   font-weight: 700;
-  color: var(--white);
-  background: var(--primary2);
+  color: #fff;
+  background: #FF7A00;
   border: 0;
   border-radius: 12px;
 }
