--- a/src/pages/components/Auth/FormUser/FormUser.module.scss
+++ b/src/pages/components/Auth/FormUser/FormUser.module.scss
@@ -41,8 +41,8 @@
   margin-top: 34px;
   font-size: 1.313rem;
   font-weight: 700;
-  color: var(--white);
-  background: var(--primary2);
+  color: #fff;
+  background: #FF7A00;
   border: 0;
   border-radius: 12px;
 }
