--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@600;700&display=swap'); */
 
 html,
 body {
@@ -12,13 +12,6 @@ body {
   padding: 0;
   box-sizing: border-box;
 }
-
-/* :root {
-  --primary: #00023C;
-  --primary2: #FF7A00;
-  --white: #fff;
-  --black: #000;
-} */
 
 input,
 button {
