--- a/src/pages/components/VideoSection/VideoSection.module.scss
+++ b/src/pages/components/VideoSection/VideoSection.module.scss
@@ -1,7 +1,10 @@
 .wrapper {
   position: relative;
+}
+
+.box {
+  position: relative;
   padding-bottom: 56.25%;
-  height: 0;
 
   iframe {
     position: absolute;
@@ -10,3 +13,22 @@
   }
 }
 
+.play {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  padding: 18px 13px 23px 28px;
+  font-size: 0;
+  width: 9.098%;
+  height: 16.173%;
+  border-radius: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.icon_play {
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+  background-image: url(../../../assets/icons/icon_play.png);
+  background-size: cover;
+}
