--- a/src/pages/components/VideoSection/VideoSection.module.scss
+++ b/src/pages/components/VideoSection/VideoSection.module.scss
@@ -13,22 +13,33 @@
   }
 }
 
-.play {
+.skip {
   position: absolute;
-  top: 50%;
-  left: 50%;
-  padding: 18px 13px 23px 28px;
-  font-size: 0;
-  width: 9.098%;
-  height: 16.173%;
-  border-radius: 50%;
-  transform: translate(-50%, -50%);
+  bottom: 9.285%;
+  right: 0;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  gap: 7px;
+  min-width: 132px;
+  padding: 11px 8px 9px 17px;
+  font-size: 1rem;
+  font-weight: 700;
+  color: #fff;
+  background: rgba(255, 255, 255, 0.2);
 }
 
-.icon_play {
+.icon_plate {
   display: inline-block;
-  width: 100%;
-  height: 100%;
-  background-image: url(../../../assets/icons/icon_play.png);
-  background-size: cover;
+  width: 35px;
+  height: 35px;
+  margin-left: 14px;
+  background: url(../../../assets/icons/icon_plate4.png);
+}
+
+.icon_skip {
+  display: inline-block;
+  width: 24px;
+  height: 24px;
+  background: url(../../../assets/icons/icon_skip.png);
 }
