--- a/src/pages/components/HelpModal/HelpModal.module.scss
+++ b/src/pages/components/HelpModal/HelpModal.module.scss
@@ -9,6 +9,10 @@
 
   & + .item {
     margin-top: 32px;
+
+    @media (max-width: 600px) {
+      margin-top: 28px;
+    }
   }
 }
 
@@ -18,6 +22,10 @@
   justify-content: center;
   gap: 12px;
   margin-top: 32px;
+
+  @media (max-width: 600px) {
+    margin-top: 28px;
+  }
 }
 
 .icon_plate {
