--- a/src/pages/components/PushModal/PushModal.module.scss
+++ b/src/pages/components/PushModal/PushModal.module.scss
@@ -3,6 +3,10 @@
   flex-direction: column;
   gap: 32px;
   width: 100%;
+
+  @media (max-width: 600px) {
+    padding: 38px 26px;
+  }
 }
 
 .form {
