--- a/src/pages/components/SpinModal/SpinModal.module.scss
+++ b/src/pages/components/SpinModal/SpinModal.module.scss
@@ -4,12 +4,22 @@
   font-weight: 700;
   color: #333;
   text-align: center;
+
+  @media (max-width: 600px) {
+    font-size: 18px;
+    line-height: 25px;
+  }
 }
 
 .note {
   margin-top: 33px;
   font-size: 1rem;
   line-height: 19px;
+  text-align: center;
+
+  @media (max-width: 600px) {
+    margin-top: 16px;
+  }
 }
 
 .email {
