--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -12,6 +12,7 @@
 }
 
 .inner {
+  overflow: auto;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -24,6 +25,7 @@
   border-radius: 20px;
 
   @media (max-width: 600px) {
+    max-height: calc(100% - 32px);
     min-height: 260px;
     padding: 16px;
   }
