--- a/src/components/Select/Select.module.scss
+++ b/src/components/Select/Select.module.scss
@@ -8,6 +8,7 @@
     font-size: 1rem;
     line-height: 19px;
     padding: 16px 19px;
+    color: #333;
     background: #DFDFDF;
     text-align: left;
     border-radius: 6px;
