--- a/src/pages/components/Video/VideoSection/VideoSection.module.scss
+++ b/src/pages/components/Video/VideoSection/VideoSection.module.scss
@@ -32,6 +32,25 @@
     padding: 0 16px;
     font-size: 16px;
     line-height: 19px;
-    
+  }
+}
+
+.alert {
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 59px;
+  font-size: 18px;
+  color: #000;
+  background: #fff;
+  font-family: 'Open Sans', sans-serif;
+  z-index: 2;
+
+  @media (max-width: 600px) {
+    height: 32px;
   }
 }
