--- a/src/components/Select/Select.module.scss
+++ b/src/components/Select/Select.module.scss
@@ -20,7 +20,7 @@
         transform: translateY(-50%);
         width: 20px;
         height: 20px;
-        background: url(../../assets/icons/icon_down.png);
+        background: url(../../assets/Icons/icon_down.png);
         content: '';
     }
 }
