--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -35,15 +35,16 @@
   position: absolute;
   top: 24px;
   right: 23px;
-  width: 40px;
-  height: 40px;
-  background: url('../../assets/icons/icon_close.png');
+  font-size: 0;
+  background: transparent;
 
   @media (max-width: 600px) {
     top: 14px;
     right: 16px;
-    width: 24px;
-    height: 24px;
-    background-size: cover; 
-  } 
+
+    .icon_close {
+      width: 24px;
+      height: 24px;
+    }
+  }
 }
