--- a/src/pages/components/HelpModal/HelpModal.module.scss
+++ b/src/pages/components/HelpModal/HelpModal.module.scss
@@ -1,4 +1,5 @@
-.item,.sub {
+.item,
+.sub {
   font-size: 1rem;
   font-weight: 600;
   line-height: 24px;
@@ -7,7 +8,7 @@
 .item {
   text-align: center;
 
-  & + .item {
+  &+.item {
     margin-top: 32px;
 
     @media (max-width: 600px) {
@@ -32,5 +33,5 @@
   display: inline-block;
   width: 36px;
   height: 36px;
-  background: url(../../../assets/icons/icon_plate2.png);
+  // background: url(../../../assets/icons/icon_plate2.png);
 }
