--- a/src/components/Select/Select.module.scss
+++ b/src/components/Select/Select.module.scss
@@ -3,7 +3,9 @@
 }
 
 .btn {
-    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
     width: 100%;
     font-size: 1rem;
     line-height: 19px;
@@ -12,17 +14,6 @@
     background: #DFDFDF;
     text-align: left;
     border-radius: 6px;
-
-    &:after {
-        position: absolute;
-        top: 50%;
-        right: 18px;
-        transform: translateY(-50%);
-        width: 20px;
-        height: 20px;
-        background: url(../../assets/Icons/icon_down.png);
-        content: '';
-    }
 }
 
 .option {
