--- a/src/pages/components/Controller/Controller.module.scss
+++ b/src/pages/components/Controller/Controller.module.scss
@@ -37,22 +37,10 @@
       margin-left: 17.5%;
     }
   }
-
-  .icon_pause {
-    // background-image: url(../../../assets/icons/icon_controller_pause.png);
-  }
-
-  .icon_play {
-    // background-image: url(../../../assets/icons/icon_controller_pip.png);
-  }
-
-  .icon_pip {
-    // background-image: url(../../../assets/icons/icon_controller_pip.png);
-  }
 }
 
 .bookmark {
-  top: 1.73%;
+  top: 14.867%;
   left: 8.75%;
   width: 66px;
   height: 66px;
@@ -64,6 +52,21 @@
     left: 16px;
     width: 32px;
     height: 32px;
+  }
+}
+
+.play {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  padding: 18px 8px 18px 21px;
+  border-radius: 50%;
+  background: #fff;
+  transform: translate(-50%, -50%);
+
+  @media (max-width: 600px) {
+    padding: 5px 3px 5px 6px;
+    ;
   }
 }
 
@@ -197,12 +200,10 @@
   display: inline-block;
   width: 77px;
   height: 77px;
-  // background-image: url(../../../assets/icons/icon_prev.png);
 
   @media (max-width: 600px) {
     width: 32px;
     height: 32px;
-    background-size: cover;
   }
 }
 
@@ -211,5 +212,12 @@
 
   @media (max-width: 600px) {
     margin-left: 0;
+  }
+}
+
+.icon_play {
+  @media (max-width: 600px) {
+    width: 28px;
+    height: 28px;
   }
 }
