--- a/src/pages/components/PushModal/PushModal.module.scss
+++ b/src/pages/components/PushModal/PushModal.module.scss
@@ -1,90 +1,32 @@
-.wrapper {
-  width: 100%;
-  max-height: calc(100vh - 64px);
-}
-
-.content {
-  display: flex;
-  flex-direction: column;
-  gap: 32px;
-  padding: 38px 0;
-
-  @media (max-width: 600px) {
-    gap: 16px;
-  }
-}
-
-.form {
-  display: flex;
-  flex-direction: column;
-  text-align: left;
-  flex: 1;
-  gap: 9px;
-
-  &+.form {
-    margin-top: 32px;
-
-    @media (max-width: 600px) {
-      margin-top: 16px;
-    }
-  }
-}
-
 .exchange {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 5px;
   font-size: 21px;
   line-height: 29px;
   font-weight: 700;
   color: #333;
   text-align: center;
-}
 
-.label {
-  font-size: 1rem;
-  line-height: 22px;
-  font-weight: 600;
-  font-family: 'Open Sans', sans-serif;
-}
-
-.input {
-  flex: 1;
-  padding: 16px 19px;
-  font-size: 1rem;
-  line-height: 19px;
-  background: #DFDFDF;
-  border-radius: 6px;
-
-  &.textarea {
-    min-height: 130px;
-    border: 0;
-    outline: 0;
-    resize: none;
+  @media (max-width: 600px) {
+    font-size: 18px;
+    line-height: 25px;
   }
 }
 
-.submit {
-  width: 100%;
-  height: 58px;
-  font-size: 18px;
-  font-weight: 700;
-  color: #fff;
-  background: #FF7A00;
-  border: 0;
-  border-radius: 12px;
-  cursor: pointer;
-}
-
-.icon_plate {
-  width: 28px;
-  height: 28px;
-}
-
 .note {
-  font-size: 16px;
-  line-height: 22px;
-  color: #333;
-  font-family: 'Open Sans', sans-serif;
+  margin-top: 33px;
+  font-size: 1rem;
+  line-height: 19px;
+  text-align: center;
+
+  @media (max-width: 600px) {
+    margin-top: 16px;
+  }
+}
+
+.email {
+  color: #2d9cdb;
+  font-weight: bold;
+  background-image: linear-gradient(#2d9cdb, #2d9cdb);
+  background-repeat: no-repeat;
+  background-position: left 0 bottom 0;
+  background-size: 100% 1px;
 }
