--- a/src/components/Select/Select.module.scss
+++ b/src/components/Select/Select.module.scss
@@ -23,6 +23,10 @@
     z-index: 1;
     border-radius: 6px;
     box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.13);
+
+    @media (max-width: 600px) {
+        max-height: 150px;
+    }
 }
 
 .list {
@@ -52,4 +56,14 @@
 .icon_arrow {
     position: absolute;
     right: 19px;
+}
+
+.current {
+    padding: 14px 16px;
+    font-weight: 600;
+    line-height: 20px;
+}
+
+.sort {
+    min-width: 170px;
 }
