--- a/src/pages/components/Controller/Controller.module.scss
+++ b/src/pages/components/Controller/Controller.module.scss
@@ -40,8 +40,10 @@
 }
 
 .bookmark {
-  top: 14.867%;
+  top: 5.557%;
   left: 8.75%;
+  // top: 14.867%;
+  // left: 8.75%;
   width: 66px;
   height: 66px;
   border-radius: 50%;
