--- a/src/pages/components/Countdown/Countdown.module.scss
+++ b/src/pages/components/Countdown/Countdown.module.scss
@@ -1,13 +1,13 @@
 .wrapper {
     display: flex;
+    align-items: center;
     gap: 12px;
     color: #fff;
     font-size: 20px;
     font-weight: 700;
 
-
     @media (max-width: 600px) {
-        display: none;
+        flex-direction: column;
     }
 }
 
