--- a/src/pages/components/Video/VideoSection/VideoSection.module.scss
+++ b/src/pages/components/Video/VideoSection/VideoSection.module.scss
@@ -4,12 +4,16 @@
 }
 
 .video {
+  position: relative;
   font-size: 0;
+  padding-bottom: 56.25%;
 }
 
 .box {
-  position: relative;
+  position: absolute;
+  top: 0;
   width: 100%;
+  height: 100%;
   z-index: 1;
   background: rgba(0, 0, 0, 0.2);
 
