--- a/src/pages/SavePage/SavePage.module.scss
+++ b/src/pages/SavePage/SavePage.module.scss
@@ -85,6 +85,7 @@
     color: #828282;
     border-radius: 2px;
     background: #F2F2F2;
+    cursor: pointer;
 
     @media (max-width: 600px) {
       width: 32px;
@@ -94,7 +95,7 @@
 
     &.active {
       color: #fff;
-     background: #ED7101; 
+      background: #ED7101;
     }
   }
 }
