--- a/src/pages/components/Countdown/Countdown.module.scss
+++ b/src/pages/components/Countdown/Countdown.module.scss
@@ -7,7 +7,12 @@
     font-weight: 700;
 
     @media (max-width: 600px) {
-        flex-direction: column;
+        min-width: 219px;
+        font-size: 16px;
+    }
+
+    @media (max-width: 472px) {
+        order: 3;
     }
 }
 
