--- a/src/pages/components/Admin/Admin.module.scss
+++ b/src/pages/components/Admin/Admin.module.scss
@@ -98,7 +98,7 @@
   }
 
   &:hover {
-    .dimmer {
+    .plaholder {
       opacity: 1;
     }
   }
@@ -107,9 +107,14 @@
 .img {
   position: relative;
   font-size: 0;
+  padding-bottom: 56.25%;
   
   img {
+    position: absolute;
+    top: 0;
     width: 100%;
+    height: 100%;
+    object-fit: cover;
   }
 }
 
@@ -118,6 +123,7 @@
   display: block;
   display: -webkit-box;
   max-height: 38px;
+  margin-top: 12px;
   color: #333;
   font-size: 16px;
   line-height: 19px;
@@ -126,7 +132,7 @@
   text-overflow: ellipsis;
 }
 
-.dimmer {
+.plaholder {
   position: absolute;
   top: 0;
   left: 0;
@@ -161,5 +167,80 @@
 
   & ~ .tit {
     margin-top: 38px;
+  }
+}
+
+
+.dimmed {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.6);
+}
+
+.modal {
+  position: relative;
+  max-width: 412px;
+  padding: 66px 42px 32px;
+  background: #fff;
+  border-radius: 20px;
+  text-align: center;
+
+  @media (max-width: 600px) {
+    max-height: calc(100% - 32px);
+    min-height: 260px;
+    padding: 16px;
+  }
+}
+
+.btn_close {
+  position: absolute;
+  top: 10px;
+  right: 13px;
+  font-size: 0;
+  background: transparent;
+
+  @media (max-width: 600px) {
+    top: 14px;
+    right: 16px;
+
+    .icon_close {
+      width: 24px;
+      height: 24px;
+    }
+  }
+}
+
+.text {
+  font-size: 16px;
+  line-height: 22px;
+  color: #333;
+}
+
+.group_btn {
+  margin-top: 32px;
+
+  .btn {
+    width: 100%;
+    height: 58px;
+    border-radius: 12px;
+    color: #fff;
+    font-size: 18px;
+    font-weight: 700;
+    background: #828282;
+    font-family: "Open Sans", sans-serif;
+
+    & + .btn  {
+      margin-top: 8px;
+    }
+
+    &.confirm {
+      background: #FF7A00;
+    }
   }
 }
