--- a/src/pages/components/Admin/Admin.module.scss
+++ b/src/pages/components/Admin/Admin.module.scss
@@ -170,6 +170,18 @@
   }
 }
 
+h3.tit {
+  & + .cont {
+    margin-top: 25px;
+  }
+}
+
+h4.tit {
+  & + .cont {
+    margin-top: 12px;
+  }
+}
+
 
 .dimmed {
   display: flex;
@@ -243,4 +255,83 @@
       background: #FF7A00;
     }
   }
+}
+
+.inp_text {
+  width: 100%;
+  min-height: 76px;
+  padding: 10px 16px;
+  font-size: 16px;
+  line-height: 22px;
+  color: #4F4F4F;
+  border: none;
+  outline: none;
+  resize: none;
+  border-radius: 8px;
+  background: #E0E0E0;
+  font-family: "Open Sans", sans-serif;
+}
+
+.submit {
+  float: right;
+  min-width: 181px;
+  height: 45px;
+  margin-top: 25px;
+  color: #fff;
+  font-size: 18px;
+  font-weight: bold;
+  background: #FF7A00;
+  border-radius: 12px;
+}
+
+.form {
+  font-size: 0;
+}
+
+.file_box {
+  position: relative;
+  font-size: 16px;
+  color: #000;
+  border-radius: 12px;
+  background: #f2f2f2;
+
+  .area {
+    display: block;
+    width: 100%;
+    height: 175px;
+    // pointer-events: none;
+  }
+
+  .txt {
+    margin-left: 48px;
+    padding-top: 41px;
+  }
+}
+
+.btn_upload {
+  display: flex;
+  align-items: center;
+  gap: 7px;
+  margin-top: 21px;
+  margin-left: 52px;
+  padding: 10px 12px;
+  color: #fff;
+  font-weight: bold;
+  font-size: 16px;
+  border-radius: 6px;
+  background: #00023B;
+}
+
+.img_file {
+  position: absolute;
+  top: 50%;
+  right: 31px;
+  transform: translateY(-50%);
+  width: 260px;
+  font-size: 0;
+}
+
+.img_thumb {
+  width: 100%;
+  height: 146px;
 }
