--- a/src/pages/SavePage/SavePage.module.scss
+++ b/src/pages/SavePage/SavePage.module.scss
@@ -45,7 +45,17 @@
 }
 
 .img {
-  width: 100%;
+  position: relative;
+  font-size: 0;
+  padding-bottom: 56.25%;
+  
+  img {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
 }
 
 .name {
