--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -3,6 +3,7 @@
 }
 
 .inner {
+  position: relative;
   display: flex;
   align-items: center;
   flex-wrap: wrap;
@@ -45,7 +46,9 @@
       }
     }
 
-
+    .btn_lang {
+      position: static;
+    }
   }
 }
 
@@ -83,7 +86,7 @@
   }
 
   &.type {
-    gap: 36px;
+    gap: 12px;
 
     @media (max-width: 768px) {
       gap: 18px;
@@ -93,8 +96,6 @@
         font-size: 0;
       }
     }
-
-    
   }
 
   &.type2 {
@@ -106,8 +107,10 @@
     }
 
     .btn {
-      width: 96px;
+      min-width: 96px;
+      width: auto;
       height: 43px;
+      padding: 0 16px;
       color: #00023C;
       background: #fff;
 
@@ -129,6 +132,8 @@
   align-items: center;
   justify-content: center;
   gap: 9px;
+  width: 28px;
+  height: 28px;
   font-size: 1rem;
   font-weight: bold;
   font-family: 'Inter', sans-serif;
@@ -136,4 +141,54 @@
   text-decoration: none;
   color: #fff;
   border-radius: 12px;
+}
+
+.btn_lang {
+  position: absolute;
+  right: 5.75%;
+  z-index: 3;
+
+  @media (max-width: 768px) {
+    position: absolute;
+    top: 29px;
+    right: 21px;
+  }
+}
+
+.option {
+  position: absolute;
+  top: 36px;
+  right: 0;
+  width: 160px;
+  max-height: 300px;
+  border-radius: 6px;
+  overflow: auto;
+  box-shadow: 0px 4px 16px rgb(0 0 0 / 13%)
+}
+
+.list {
+  padding: 10px 0;
+  background: #fff;
+}
+
+.item {
+  padding: 7px 12px;
+  line-height: 18px;
+  color: #333;
+  font-size: 14px;
+  font-weight: normal;
+  text-transform: capitalize;
+  cursor: pointer;
+
+  &.active {
+    color: #fff;
+    background: #FF7A00;
+
+    &:hover {
+      background: #FF7A00;
+    }
+  }
+  &:hover {
+    background: rgba(255, 122, 0, 0.2);
+  }
 }
