--- a/src/pages/components/Auth/FormUser/FormUser.module.scss
+++ b/src/pages/components/Auth/FormUser/FormUser.module.scss
@@ -51,6 +51,7 @@
   font-size: 1.313rem;
   font-weight: 700;
   color: #fff;
+  text-transform: uppercase;
   background: #FF7A00;
   border: 0;
   border-radius: 12px;
