--- a/src/pages/components/SpinModal/SpinModal.module.scss
+++ b/src/pages/components/SpinModal/SpinModal.module.scss
@@ -71,6 +71,7 @@
   font-size: 18px;
   font-weight: 700;
   color: #fff;
+  text-transform: uppercase;
   background: #FF7A00;
   border: 0;
   border-radius: 12px;
