--- a/src/pages/components/Admin/Admin.module.scss
+++ b/src/pages/components/Admin/Admin.module.scss
@@ -259,7 +259,7 @@ h4.tit {
 
 .inp_text {
   width: 100%;
-  min-height: 76px;
+  height: 42px;
   padding: 10px 16px;
   font-size: 16px;
   line-height: 22px;
