--- a/src/pages/components/Countdown/Countdown.module.scss
+++ b/src/pages/components/Countdown/Countdown.module.scss
@@ -13,7 +13,8 @@
     }
 
     @media (max-width: 530px) {
-        // order: 5;
+        width: 100%;
+        grid-area: 2 / 1 / 3 / 4;
     }
 }
 
