--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -20,9 +20,21 @@
     padding: 18px 21px 20px;
   }
 
+  @media (max-width: 530px) {
+    display: flex;
+  }
+
   &.loggedin {
+    
     flex-direction: row;
     align-items: center;
+
+    @media (max-width: 530px) {
+      display: grid;
+      grid-template-columns: 1fr 74px 28px;
+      grid-template-rows: repeat(2, auto);
+      grid-column-gap: 18px;
+    }
 
     .link {
       background-position: center left;
@@ -32,6 +44,10 @@
       margin-right: auto;
       @media (max-width: 768px) {
         order: 1;
+      }
+
+      @media (max-width: 530px) {
+        grid-area: 1 / 1 / 2 / 2;
       }
     }
 
@@ -46,6 +62,10 @@
         @media (max-width: 768px) {
           order: 2;
         }
+
+        @media (max-width: 530px) {
+          grid-area: 1 / 2 / 2 / 3;
+        }
       }
     }
 
@@ -56,6 +76,10 @@
 
       @media (max-width: 768px) {
         order: 4;
+      }
+
+      @media (max-width: 530px) {
+        grid-area: 1 / 3 / 2 / 4;
       }
     }
   }
@@ -155,7 +179,7 @@
 .btn_lang {
   position: absolute;
   right: 5.75%;
-  z-index: 3;
+  z-index: 4;
 
   @media (max-width: 768px) {
     position: absolute;
