--- a/src/pages/components/Controller/Controller.module.scss
+++ b/src/pages/components/Controller/Controller.module.scss
@@ -40,17 +40,15 @@
 }
 
 .bookmark {
-  top: 5.557%;
-  left: 8.75%;
-  // top: 14.867%;
-  // left: 8.75%;
+  top: 55px;
+  left: 37px;
   width: 66px;
   height: 66px;
   border-radius: 50%;
   background: rgba(0, 0, 0, 0.7);
 
   @media (max-width: 768px) {
-    top: 16px;
+    top: 28px;
     left: 16px;
     width: 32px;
     height: 32px;
