--- a/src/pages/components/Video/VideoSection/VideoSection.module.scss
+++ b/src/pages/components/Video/VideoSection/VideoSection.module.scss
@@ -43,3 +43,26 @@
     height: 32px;
   }
 }
+
+.link_area {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: 20px 40px;
+  z-index: 3;
+  background: linear-gradient(180deg, #333, transparent);
+  
+  @media (max-width: 768px) {
+    padding: 6px 16px;
+  }
+}
+
+.link {
+  font-size: 16px;
+  color: #fff;
+  
+  @media (max-width: 768px) {
+    font-size: 14px;
+  }
+}
