--- a/src/components/Pagination/Pagination.module.scss
+++ b/src/components/Pagination/Pagination.module.scss
@@ -21,6 +21,7 @@
     color: #828282;
     border-radius: 2px;
     background: #F2F2F2;
+    cursor: pointer;
 
     @media (max-width: 768px) {
       width: 32px;
