--- a/src/layouts/AdminLayout/AdminLayout.module.scss
+++ b/src/layouts/AdminLayout/AdminLayout.module.scss
@@ -4,18 +4,21 @@
 
 .header {
   background: #00023C;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  max-width: 1440px;
-  margin: auto;
-  padding: 20px 8.75% 21px;
 
-  @media (max-width: 768px) {
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 22px;
-    padding: 18px 21px 20px;
+  .inner {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    max-width: 1440px;
+    margin: auto;
+    padding: 20px 8.75% 21px;
+
+    @media (max-width: 768px) {
+      flex-direction: column;
+      align-items: flex-start;
+      gap: 22px;
+      padding: 18px 21px 20px;
+    }
   }
 }
 
