--- a/src/pages/components/HelpModal/HelpModal.module.scss
+++ b/src/pages/components/HelpModal/HelpModal.module.scss
@@ -21,11 +21,14 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 12px;
   margin-top: 32px;
 
   @media (max-width: 768px) {
     margin-top: 28px;
+  }
+
+  .icon_plate {
+    margin-right: 12px;
   }
 }
 
