--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -8,7 +8,6 @@
   align-items: center;
   flex-wrap: wrap;
   justify-content: space-between;
-  gap: 0 16px;
   max-width: 1440px;
   margin: auto;
   padding: 20px 8.75% 21px;
@@ -16,7 +15,6 @@
   @media (max-width: 768px) {
     flex-direction: column;
     align-items: flex-start;
-    gap: 0 22px;
     padding: 18px 21px 20px;
   }
 
@@ -52,12 +50,17 @@
     }
 
     .btn_group {
+      margin-left: 0;
       @media (max-width: 768px) {
         width: auto;
       }
       
       &.type {
         margin-left: auto;
+
+        .btn + .btn {
+          margin-left: 16px;
+        }
 
         @media (max-width: 768px) {
           order: 2;
@@ -113,26 +116,29 @@
 
 .btn_group {
   display: flex;
+  margin-left: 16px;
 
   @media (max-width: 768px) {
     width: 100%;
+    margin-left: 0;
   }
 
   &.type {
-    gap: 12px;
 
     @media (max-width: 768px) {
-      gap: 18px;
 
       .btn {
-        gap: 0;
         font-size: 0;
       }
     }
   }
 
   &.type2 {
-    gap: 9px;
+    // gap: 9px;
+
+    .btn + .btn {
+      margin-left: 9px;
+    }
 
     @media (max-width: 768px) {
       order: 3;
@@ -164,7 +170,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 9px;
   width: 28px;
   height: 28px;
   font-size: 1rem;
@@ -180,11 +185,16 @@
   position: absolute;
   right: 5.75%;
   z-index: 4;
+  margin-left: 22px;
 
   @media (max-width: 768px) {
     position: absolute;
     top: 29px;
     right: 21px;
+  }
+
+  @media (max-width: 530px) {
+    margin-left: 0;
   }
 }
 
