--- a/src/pages/HomePage/HomePage.module.scss
+++ b/src/pages/HomePage/HomePage.module.scss
@@ -5,12 +5,10 @@
 .group {
   display: flex;
   justify-content: center;
-  gap: 19px;
   margin-top: 40px;
   padding: 0 7.9167%;
 
   @media (max-width: 768px) {
-    gap: 10px;
     margin-top: 24px;
     padding: 0 16px;
   }
@@ -20,7 +18,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 12px;
   flex: 1;
   min-height: 59px;
   padding: 12px 24px;
@@ -30,6 +27,14 @@
   font-weight: bold;
   border: 1px solid transparent;
   border-radius: 12px;
+
+  & + .btn {
+    margin-left: 19px;
+
+    @media (max-width: 768px) {
+      margin-left: 10px;
+    }
+  }
 
   @media (max-width: 768px) {
     padding: 0;
@@ -49,6 +54,10 @@
   color: #000;
   background: transparent;
   border-color: #000;
+
+  .icon_plate {
+    margin-left: 8px;
+  }
 }
 
 .reward {
@@ -115,5 +124,19 @@
 
   @media (max-width: 768px) {
     width: 198px;
+  }
+}
+
+.note {
+  margin-top: 32px;
+  font-size: 36px;
+  text-align: center;
+  font-weight: bold;
+  color: #ff4242;
+  text-decoration: underline;
+
+  @media (max-width: 768px) {
+    margin-top: 16px;
+    font-size: 28px;
   }
 }
