--- a/src/pages/SavePage/SavePage.module.scss
+++ b/src/pages/SavePage/SavePage.module.scss
@@ -29,18 +29,19 @@
 .list {
   display: flex;
   flex-wrap: wrap;
-  gap: 40px 12px;
-
-  @media (max-width: 768px) {
-    gap: 24px 12px;
-  }
 }
 
 .item {
-  width: calc((100% - 24px)/3);
+  width: calc((100% - 36px)/4);
+  padding: 20px 6px;
+
+  @media (max-width: 1200px) {
+    width: calc((100% - 24px)/3);
+  }
 
   @media (max-width: 768px) {
     width: calc((100% - 12px)/2);
+    padding: 12px 6px;
   }
 }
 
@@ -63,51 +64,13 @@
   display: block;
   display: -webkit-box;
   max-height: 38px;
+  margin-top: 8px;
   color: #333;
   font-size: 16px;
   line-height: 19px;
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
   text-overflow: ellipsis;
-}
-
-.pagination {
-  margin: 6.106% 0;
-
-  @media (max-width: 768px) {
-    margin: 24px 0 32px;
-  }
-
-  ul {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 4px;
-  }
-
-  .btn {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 45px;
-    height: 45px;
-    font-size: 18px;
-    color: #828282;
-    border-radius: 2px;
-    background: #F2F2F2;
-    cursor: pointer;
-
-    @media (max-width: 768px) {
-      width: 32px;
-      height: 32px;
-      font-size: 16px;
-    }
-
-    &.active {
-      color: #fff;
-      background: #ED7101;
-    }
-  }
 }
 
 .link {
