--- a/src/pages/components/Admin/Admin.module.scss
+++ b/src/pages/components/Admin/Admin.module.scss
@@ -53,7 +53,6 @@
 .filter {
   display: flex;
   justify-content: space-between;
-  gap: 12px;
 
   @media (max-width: 832px) {
     flex-wrap: wrap;
@@ -62,10 +61,13 @@
 
 .search {
   display: flex;
-  gap: 12px;
 
   @media (max-width: 832px) {
     flex: 1;
+  }
+
+  .input ~ .btn_search {
+    margin-left: 12px;
   }
 }
 
@@ -112,16 +114,12 @@
 .list {
   display: flex;
   flex-wrap: wrap;
-  gap: 40px 12px;
   margin-top: 34px;
-
-  @media (max-width: 768px) {
-    gap: 24px 12px;
-  }
 }
 
 .item {
   width: calc((100% - 36px) / 4);
+  padding: 20px 6px;
 
   @media (max-width: 1200px) {
     width: calc((100% - 24px)/3);
@@ -129,6 +127,7 @@
 
   @media (max-width: 768px) {
     width: calc((100% - 12px)/2);
+    padding: 12px 6px;
   }
 
   &:hover {
@@ -175,7 +174,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 21px;
   opacity: 0;
   transition: .2s;
   background: rgba(0, 0, 0, 0.8);
@@ -187,10 +185,17 @@
   justify-content: center;
   align-items: center;
   background: transparent;
-  gap: 8px;
   color: #fff;
   font-size: 16px;
   line-height: 22px;
+
+  & + .btn_control {
+    margin-left: 21px;
+  }
+
+  .icon_custom {
+    margin-bottom: 8px;
+  }
 }
 
 .tit {
@@ -349,7 +354,6 @@ h4.tit {
 .btn_upload {
   display: flex;
   align-items: center;
-  gap: 7px;
   margin-top: 21px;
   margin-left: 52px;
   padding: 10px 12px;
@@ -363,6 +367,11 @@ h4.tit {
     pointer-events: none;
     opacity: 0.5;
   }
+}
+
+.icon_upload {
+  display: inline-block;
+  margin-left: 7px;
 }
 
 .img_file {
