--- a/src/pages/components/Controller/Controller.module.scss
+++ b/src/pages/components/Controller/Controller.module.scss
@@ -74,7 +74,6 @@
   display: flex;
   align-items: center;
   justify-content: flex-end;
-  gap: 7px;
   min-width: 132px;
   padding: 11px 8px 9px 17px;
   font-size: 16px;
@@ -86,7 +85,6 @@
   @media (max-width: 768px) {
     min-width: 106px;
     font-size: 14px;
-    gap: 10px;
     padding: 5px 10px;
   }
 
@@ -109,7 +107,7 @@
 
 .progress {
   position: absolute;
-  bottom: -3px;
+  bottom: -2px;
   left: -1px;
   right: -1px;
   font-size: 0;
@@ -209,10 +207,18 @@
 }
 
 .icon_plate {
-  margin-left: 14px;
+  margin-left: 21px;
 
   @media (max-width: 768px) {
-    margin-left: 0;
+    margin-left: 10px;
+  }
+}
+
+.icon_skip {
+  margin-left: 7px;
+
+  @media (max-width: 768px) {
+    margin-left: 10px;
   }
 }
 
