--- a/src/pages/components/SpinModal/SpinModal.module.scss
+++ b/src/pages/components/SpinModal/SpinModal.module.scss
@@ -6,12 +6,7 @@
 .content {
   display: flex;
   flex-direction: column;
-  gap: 32px;
   padding: 38px 0;
-
-  @media (max-width: 768px) {
-    gap: 16px;
-  }
 }
 
 .form {
@@ -19,7 +14,10 @@
   flex-direction: column;
   text-align: left;
   flex: 1;
-  gap: 9px;
+
+  .label {
+    margin-bottom: 9px;
+  }
 
   &+.form {
     margin-top: 32px;
@@ -30,16 +28,27 @@
   }
 }
 
+.form_group {
+  margin-top: 32px;
+
+  @media (max-width: 768px) {
+    margin-top: 16px;
+  }
+}
+
 .exchange {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 5px;
   font-size: 21px;
   line-height: 29px;
   font-weight: 700;
   color: #333;
   text-align: center;
+
+  .icon_plate {
+    margin-left: 5px;
+  }
 }
 
 .label {
@@ -68,6 +77,7 @@
 .submit {
   width: 100%;
   height: 58px;
+  margin-top: 32px;
   font-size: 18px;
   font-weight: 700;
   color: #fff;
@@ -76,6 +86,10 @@
   border: 0;
   border-radius: 12px;
   cursor: pointer;
+
+  @media (max-width: 768px) {
+    margin-top: 16px;
+  }
 }
 
 .icon_plate {
@@ -84,8 +98,13 @@
 }
 
 .note {
+  margin-top: 32px;
   font-size: 16px;
   line-height: 22px;
   color: #333;
   font-family: 'Open Sans', sans-serif;
+
+  @media (max-width: 768px) {
+    margin-top: 16px;
+  }
 }
