--- a/src/pages/components/Admin/Admin.module.scss
+++ b/src/pages/components/Admin/Admin.module.scss
@@ -21,6 +21,22 @@
   padding: 29px 23px;
   border: 1px solid #E0E0E0;
   border-radius: 12px;
+
+  &.show {
+    position: absolute;
+    left: 0;
+    top: 40px;
+    display: block;
+    width: auto;
+    min-width: 250px;
+    border-radius: 0;
+    background: #fff;
+    z-index: 1;
+  }
+
+  @media (max-width: 720px) {
+    display: none;
+  }
 }
 
 .nav_lst {
@@ -206,12 +222,20 @@
 
   & ~ .tit {
     margin-top: 38px;
+
+    @media (max-width: 720px) {
+      margin-top: 24px;
+    }
   }
 }
 
 h3.tit {
   & + .cont {
     margin-top: 25px;
+
+    @media (max-width: 768px) {
+      margin-top: 12px;
+    }
   }
 }
 
@@ -350,9 +374,18 @@ h4.tit {
   border-radius: 12px;
   background: #f2f2f2;
 
+  @media (max-width: 1023px) {
+    height: auto;
+    min-height: 175px;
+  }
+
   .txt {
     margin-left: 48px;
     padding-top: 41px;
+
+    @media (max-width: 720px) {
+      margin-left: 24px;
+    }
   }
 }
 
@@ -367,6 +400,10 @@ h4.tit {
   font-size: 16px;
   border-radius: 6px;
   background: #00023B;
+
+  @media (max-width: 720px) {
+    margin-left: 24px;
+  }
 
   &.disabled {
     pointer-events: none;
@@ -388,6 +425,15 @@ h4.tit {
   height: 146px;
   object-fit: cover;
   font-size: 0;
+
+  @media (max-width: 1023px) {
+    top: 0;
+    transform: none;
+    position: static;
+    margin-left: 24px;
+    margin-top: 20px;
+    padding-bottom: 10px;
+  }
 }
 
 .img_thumb {
@@ -517,4 +563,26 @@ h4.tit {
     margin-left: 27px;
     color: #333;
   }
+}
+
+.menu_box {
+  position: relative;
+}
+
+.btn_menu {
+  display: none;
+  border-radius: 2px;
+
+  @media (max-width: 720px) {
+    display: flex;
+    align-items: center;
+    padding: 6px 10px;
+    background: #eee;
+    font-size: 18px;
+    border-radius: 4px;
+  }
+}
+
+.icon_menu {
+  margin-right: 6px;
 }
