--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -7,7 +7,7 @@
   display: flex;
   align-items: center;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: flex-end;
   max-width: 1440px;
   margin: auto;
   padding: 20px 8.75% 21px;
@@ -39,13 +39,11 @@
     }
 
     .logo {
-      margin-right: auto;
+      height: 100%;
+
       @media (max-width: 768px) {
         order: 1;
-      }
-
-      @media (max-width: 530px) {
-        grid-area: 1 / 1 / 2 / 2;
+        top: 0;
       }
     }
 
@@ -89,12 +87,15 @@
 }
 
 .logo {
-  width: 163px;
-  height: 80px;
+  position: absolute;
+  top: 0;
+  left: 8.75%;
+  height: 84px;
 
   @media (max-width: 768px) {
-    width: 94px;
-    height: 44px;
+    top: 18px;
+    left: 21px;
+    height: 50px;
   }
 
   @media (max-width: 472px) {
@@ -105,12 +106,10 @@
 .link {
   display: block;
   height: 100%;
-  background-image: url(../../assets/logo.png);
-  background-repeat: no-repeat;
-  background-position: center left;
+  font-size: 0;
 
-  @media (max-width: 768px) {
-    background-image: url(../../assets/logo_m.png);
+  img {
+    height: 100%;
   }
 }
 
@@ -142,7 +141,7 @@
 
     @media (max-width: 768px) {
       order: 3;
-      margin-top: 12px;
+      margin-top: 62px;
     }
 
     .btn {
