--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -93,9 +93,9 @@
   height: 84px;
 
   @media (max-width: 768px) {
-    top: 18px;
+    top: 0;
     left: 21px;
-    height: 50px;
+    height: 80px;
   }
 
   @media (max-width: 472px) {
